# NSU24942-Theory-of-parallel-computing

./: .gitignore
01/: CMakeLists.txt  README.md  main.cpp
02/task 1/: main.cpp
02/task 2/: main.cpp
02/task 3/: CMakeLists.txt  main.cpp
03/task 1/: CMakeLists.txt  main.cpp
